Tue Aug  3 15:50:55 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/goption.[hc]: Pedantically use g types throughout.

Tue Aug  3 14:58:20 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gutils.h: 
	* glib/gutils.c (glib_check_version): New function to
	check the version of GLib at runtime.  (#149175, Michael Natterer)

2004-08-03  Anders Carlsson  <andersca@gnome.org>

	* glib/goption.h:
	* glib/gtypes.h:
	Move GTranslateFunc to gtypes.h
	
2004-08-02  Anders Carlsson  <andersca@gnome.org>

	* glib/Makefile.am:
	* glib/glib.h:
	* glib/goption.c:
	* glib/goption.h:
	* tests/.cvsignore:
	* tests/Makefile.am:
	* tests/option-test.c: 
	Add GOption.

2004-08-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmacros.h: Add a G_GNUC_INTERNAL macro to mark function
	declarations as internal and avoid PLT indirections for 
	them.  (#145465, Arjan van de Ven)

	* glib/gunicodeprivate.h: 
	* glib/gthreadinit.h: 
	* glib/gmessages.h: 
	* glib/gdebug.h: 
	* glib/gconvert.c: Use G_GNUC_INTERNAL for _g_charset_get_aliases(),
	_g_debug_init(), _g_log_fallback_handler(), _g_mem_thread_init(),
	_g_messages_thread_init(), _g_convert_thread_init(), 
	_g_rand_thread_init(), _g_main_thread_init(), _g_atomic_thread_init(),
	_g_mem_thread_private_init(), _g_messages_thread_private_init(),
	_g_utf8_normalize_wc() and _g_unichar_combining_class().

	* glib/gatomic.c: Include gthreadinit.h here to see the declaration
	for _g_atomic_thread_init().

Sun Aug  1 13:19:18 2004  Manish Singh  <yosh@gimp.org>

	* tests/uri-test.c: move newline printing from run_from_uri_tests()
	to run_roundtrip_tests().

2004-08-01 Matthias Clasen  <mclasen@redhat.com>
                                                                                
	* Post-release version bump

        * === Released 2.5.1 ===

Sat Jul 31 23:17:05 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: Updates.

Sat Jul 31 20:33:07 2004  Matthias Clasen  <maclas@gmx.de>

	* tests/shell-test.c: Include a test involving consecutive