@@ -1,3 +1,7 @@
+Tue Aug  3 16:19:44 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* glib/goption.c: Mark user visible strings for translation.
+
 Tue Aug  3 15:50:55 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* glib/goption.[hc]: Pedantically use g types throughout.
