@@ -8,3 +8,4 @@ glib/gshell.c
 glib/gspawn-win32.c
 glib/gspawn.c
 glib/gutf8.c
+glib/goption.c
